Fix that when window is small enough that controls overlapping the canvas arent clickable due to z-index

--- a/css/tegaki.css
+++ b/css/tegaki.css
@@ -120,6 +120,7 @@
   grid-area: 2 / 3 / 4 / 4;
   padding: 6px;
   overflow: hidden auto;
+  z-index: 1000;
 }
 
 #tegaki-status-cnt {
